# pysepm

./: .gitignore  pyproject.toml
pysepm/: __init__.py  intelligibilityMeasures.py  qualityMeasures.py  util.py  wss_utils.py
