[tool.poetry]
name = "pysepm"
version = "0.1.2"
description = "Computes Objective Quality Measures"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "*"
scipy = "*"
numba = "*"
pystoi = "*"
librosa = "*"
pesq = { url = "https://github.com/ludlows/python-pesq/archive/master.zip" }
SRMRpy = { url = "https://github.com/jfsantos/SRMRpy/archive/master.zip" }
torch = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
ipython = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", "Cython", "numpy"]

build-backend = "poetry.core.masonry.api"
